--- a/client/styles/catalog/index.module.scss
+++ b/client/styles/catalog/index.module.scss
@@ -269,7 +269,7 @@
           padding: 0;
           padding-left: 30px;
           border: none;
-          background-image: url("/img/arrow-back.svg");
+          background-image: url("../../public/img/arrow-back.svg");
           background-repeat: no-repeat;
           background-position: left center;
           background-position-y: 0;
