--- a/client/styles/catalog/index.module.scss
+++ b/client/styles/catalog/index.module.scss
@@ -250,6 +250,7 @@
         margin-bottom: 12px;
         border-bottom: 1px solid #e1e1e1;
         display: flex;
+        flex-direction: column;
         align-items: flex-start;
         justify-content: space-between;
       }
@@ -559,7 +560,6 @@
         top: 0;
         transition: left 0.3s ease-in-out;
         background-color: #ffffff;
-        bottom: 0;
         z-index: 12;
         display: flex;
         flex-direction: column;
